--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 	<p>
 		<a href="mission.html">Read about our Mission</a>
 		<br>
-		Read the <a href="http://buzz.headfirstlabs.com">Caffeine Buzz</a>
+		Read the <a href="http://buzz.headfirstlabs.com" title="Read all about caffeine on the Buzz">Caffeine Buzz</a>
 	</p>
 
 </body>
