--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	<h2>Chai Tea, $1.85</h2>
 	<p>A spicy drink made with black tea, spices, milk and honey.</p>
 	<p>
-		<a href="mission.html">Read about our Mission</a>
+		<a href="mission.html" title="Read about our Mission">our Mission</a>
 		<br>
 		Read the <a href="http://buzz.headfirstlabs.com" title="Read all about caffeine on the Buzz">Caffeine Buzz</a>
 	</p>
